# http-grpc-cohosting

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
certs/: server.crt  server.key
proto/: example.proto
src/: certs.rs  hybrid.rs  main.rs  sockets.rs
test/: http-client.env.json  probes.http
