[package]
name = "http-grpc-cohosting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["http2"] }
ctrlc = "3.4.1"
dotenvy = "0.15.7"
exitcode = "1.1.2"

hyper = { version = "0.14.27", features = ["http1", "http2"] }
log = "0.4.20"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
