[package]
name = "http-grpc-cohosting"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["unix-domain-sockets"]
unix-domain-sockets = ["hyper/socket2"]

[dependencies]
axum = { version = "0.6.20", features = ["http2"] }
ctrlc = "3.4.1"
dotenvy = "0.15.7"
exitcode = "1.1.2"
hyper = { version = "0.14.27", features = ["http1", "http2"] }
log = "0.4.20"
pin-project = "1.1.3"
prost = "0.12.1"
rustls = "0.21.11"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.10.2"
tonic-reflection = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
rustls-pemfile = "1.0.3"
tokio-rustls = "0.24.1"
tls-listener = { version = "0.8.0", features = ["rustls", "hyper-h1", "hyper-h2"] }
futures-util = "0.3.29"

[build-dependencies]
tonic-build = "0.10.2"
